--- a/kostruct.html
+++ b/kostruct.html
@@ -34,9 +34,9 @@
 	<div class="content">
 		
 			<ul class="vkladki">							<!-- Вкладки -->
-				<li><a href="#" id="vkl_bd">Действия с БД</a>				
-				<li><a href="#" id="vkl_dt">Действия с таблицами</a>
-				<li><a href="#" id="vkl_dp">Действия с полями</a>
+				<li id="vkl_bd"><a href="#">Действия с БД</a>				
+				<li id="vkl_dt"><a href="#">Действия с таблицами</a>
+				<li id="vkl_dp"><a href="#">Действия с полями</a>
 			</ul>
 <!--================= КОНСТРУКТОР ===================-->		
 		<div class="forma">
