зачатки справки и снова вкладки

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 			современных пользователей, привыкших к удобным графическим интерфейсам. Для облегчения 
 			освоения студентами этого мощьного иструмента и предназначен "Конструктор запросов MySQL"
 		</p>
+		<div class="next">
 		<button class="button"><a href="kostruct.html">Перейти к конструктору запросов</a></button> 
+		</div>
 	</div>
 
 <!--================= ПОДВАЛ ===================-->
