--- a/kostruct.html
+++ b/kostruct.html
@@ -31,6 +31,12 @@
 	
 <!--================= КОНТЕНТ ===================-->
 <div class="hr_zagolovok">Выберите какой запрос вы хотите создать</div>
+
+	<div id="pods" class="podskazki_minus">
+		Короткая справка <a href="#">X</a>
+		<div id="podskazki_text"></div>
+	</div>
+	
 	<div class="content">
 		
 			<ul class="vkladki">							<!-- Вкладки -->
