--- a/kostruct.html
+++ b/kostruct.html
@@ -21,7 +21,7 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Что это?</a>
-					<li><a href="kostruct.html">Конструктор</a>
+					<li><a href="kostruct.html">Конструктор запросов</a>
 					<li><a href="faq.html">Справочник</a>
 					<li><a href="index.html"><img class="logo" src="logo.png"></a>
 				</ul>
@@ -33,7 +33,7 @@
 <div class="hr_zagolovok">Выберите какой запрос вы хотите создать</div>
 
 	<div id="pods" class="podskazki_minus">
-		Короткая справка <a href="#">X</a>
+		Короткая справка <a id="close" href="#">X</a>
 		<div id="podskazki_text"></div>
 	</div>
 	
