--- a/kostruct.html
+++ b/kostruct.html
@@ -21,7 +21,7 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Что это?</a>
-					<li><a href="kostruct.html">Конструктор запросов</a>
+					<li><a href="kostruct.html">Конструктор</a>
 					<li><a href="faq.html">Справочник</a>
 					<li><a href="index.html"><img class="logo" src="logo.png"></a>
 				</ul>
