--- a/spravka/f8.html
+++ b/spravka/f8.html
@@ -298,7 +298,7 @@ WHERE
 <!--================= ПОДВАЛ ===================-->
 	<footer>
 		<div class="foot">
-			Горлов Евгений Сергеевич 2017-2018<sup>©</sup>
+			ГПОУ ЯО Ростовский педагогический колледж  2017-2018 <sup>©</sup>
 		</div>	
 	</footer>
 	
