--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!--================= КОНТЕНТ ===================-->
 <div class="hr_zagolovok">Что такое конструктор запросов?</div>
 	<div class="content">
-	
+	<img class="index_sql" src="mysql.png">
 		<p>
 			База данных MySQL — это самая популярная в мире база данных с открытым кодом.
 			Благодаря своей проверенной производительности, надежности и относительной 
@@ -42,6 +42,7 @@
 			современных пользователей, привыкших к удобным графическим интерфейсам. Для облегчения 
 			освоения студентами этого мощьного иструмента и предназначен "Конструктор запросов MySQL"
 		</p>
+		
 		<div class="next">
 		<button class="button"><a href="kostruct.html">Перейти к конструктору запросов</a></button> 
 		</div>
@@ -50,7 +51,7 @@
 <!--================= ПОДВАЛ ===================-->
 	<footer>
 		<div class="foot">
-			Горлов Евгений Сергеевич 2017-2018<sup>©</sup>
+			ГПОУ ЯО Ростовский педагогический колледж  2017-2018 <sup>©</sup>
 		</div>	
 	</footer>
 	
