--- a/spravka/f10.html
+++ b/spravka/f10.html
@@ -222,7 +222,7 @@ $result=mysql_query($sql);
 <!--================= ПОДВАЛ ===================-->
 	<footer>
 		<div class="foot">
-			Горлов Евгений Сергеевич 2017-2018<sup>©</sup>
+			ГПОУ ЯО Ростовский педагогический колледж  2017-2018 <sup>©</sup>
 		</div>	
 	</footer>
 	
