--- a/spravka/f5.html
+++ b/spravka/f5.html
@@ -67,7 +67,7 @@
 <!--================= ПОДВАЛ ===================-->
 	<footer>
 		<div class="foot">
-			Горлов Евгений Сергеевич 2017-2018<sup>©</sup>
+			ГПОУ ЯО Ростовский педагогический колледж  2017-2018 <sup>©</sup>
 		</div>	
 	</footer>
 	
