--- a/faq.html
+++ b/faq.html
@@ -14,19 +14,17 @@
 <!--================= ШАПКА ===================-->
 	<header>
 		<div class="hed">
-			<nav>
-				<ul>
-					<li><a href="index.html">Что это?</a>
-					<li><a href="kostruct.html">Конструктор</a>
-					<li><a href="faq.html">Справочник</a>
-					<li><a href="index.html"><img class="logo" src="logo.png"></a>
-				</ul>
-			<nav>	
+			<div class="men1"><a href="index.html"><img class="logo" src="logo.png"></a>	</div>
+			<div class="men"><a href="index.html">Что это?</a></div>
+			<div class="men"><a href="kostruct.html">Занятия</a></div>
+			<div class="men"><a href="faq.html">Справочник</a></div>
+			
 		</div>
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
 <div class="hr_zagolovok">Синтаксис SQL</div>
+<div class="lessContent">	
 	<div class="content">
 		<ul class="sintaksis">
 			<li><a href="spravka/f1.html">Типы данных, используемые в базе данных MySQL</a>
@@ -47,11 +45,11 @@
 			<li><a href="spravka/f10.html">Поиск записей в таблице(SELECT)</a>
 		</ul>
 	</div>
-	
+</div>
 <!--================= ПОДВАЛ ===================-->
 	<footer>
 		<div class="foot">
-			ГПОУ ЯО Ростовский педагогический колледж  2017-2018 <sup>©</sup>
+			ГПОУ ЯО Ростовский педагогический колледж  2017-2019 <sup>©</sup>
 		</div>	
 	</footer>
 	
