--- a/index.html
+++ b/index.html
@@ -14,20 +14,17 @@
 <!--================= ШАПКА ===================-->
 	<header>
 		<div class="hed">
-			<nav>
-				<ul>
-					<li><a href="index.html">Что это?</a>
-					<li><a href="kostruct.html">Конструктор</a>
-					<li><a href="faq.html">Справочник</a>
-					<li><a href="index.html"><img class="logo" src="logo.png"></a>
-				</ul>	
-			<nav>	
+			<div class="men1"><a href="index.html"><img class="logo" src="logo.png"></a>	</div>
+			<div class="men"><a href="index.html">Что это?</a></div>
+			<div class="men"><a href="kostruct.html">Занятия</a></div>
+			<div class="men"><a href="faq.html">Справочник</a></div>
+			
 		</div>
-		
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
 <div class="hr_zagolovok">Что такое конструктор запросов?</div>
+<div class="lessContent">	
 	<div class="content">
 	<img class="index_sql" src="mysql.png">
 		<p>
@@ -40,18 +37,18 @@
 		</p><p>
 			Однако MySQL использует интерфейс командной строки, что вызывает сложности в обучении у 
 			современных пользователей, привыкших к удобным графическим интерфейсам. Для облегчения 
-			освоения студентами этого мощьного иструмента и предназначен "Конструктор запросов MySQL"
+			освоения студентами этого мощного инструмента и предназначен "Конструктор запросов MySQL"
 		</p>
 		
 		<div class="next">
-		<button class="button"><a href="kostruct.html">Перейти к конструктору запросов</a></button> 
+		<button class="button"><a href="kostruct.html">Перейти к занятиям</a></button> 
 		</div>
 	</div>
-
+</div>
 <!--================= ПОДВАЛ ===================-->
 	<footer>
 		<div class="foot">
-			ГПОУ ЯО Ростовский педагогический колледж  2017-2018 <sup>©</sup>
+			ГПОУ ЯО Ростовский педагогический колледж  2017-2019 <sup>©</sup>
 		</div>	
 	</footer>
 	
