--- a/spravka/f6_3.html
+++ b/spravka/f6_3.html
@@ -15,14 +15,11 @@
 <!--================= ШАПКА ===================-->
 	<header>
 		<div class="hed">
-			<nav>
-				<ul>
-					<li><a href="../index.html">Что это?</a>
-					<li><a href="../kostruct.html">Конструктор</a>
-					<li><a href="../faq.html">Справочник</a>
-					<li><a href="../index.html"><img class="logo" src="../logo.png"></a>
-				</ul>
-			<nav>	
+			<div class="men1"><a href="../index.html"><img class="logo" src="logo.png"></a>	</div>
+			<div class="men"><a href="../index.html">Что это?</a></div>
+			<div class="men"><a href="../kostruct.html">Занятия</a></div>
+			<div class="men"><a href="../faq.html">Справочник</a></div>
+			
 		</div>
 	</header>
 	
@@ -87,7 +84,7 @@ mysql_query($sql);
 <!--================= ПОДВАЛ ===================-->
 	<footer>
 		<div class="foot">
-			ГПОУ ЯО Ростовский педагогический колледж  2017-2018 <sup>©</sup>
+			ГПОУ ЯО Ростовский педагогический колледж  2017-2019 <sup>©</sup>
 		</div>	
 	</footer>
 	
