--- a/kostruct.html
+++ b/kostruct.html
@@ -32,26 +32,71 @@
 	</div>
 <div class="lessContent">	
 	<div class="container">
-		<div class="less less1">
-			<p class="lessName">Урок 1</p>
-			<p>В этом уроке мы изучим бла бла бла бла бла бла бла бла бла бла</p>
-		</div>
-		<div class="less less2">
-			<p class="lessName">Урок 2</p>
-			<p>В этом уроке мы изучим бла бла бла бла бла бла бла бла бла бла</p>
-		</div>
-		<div class="less less3">
-			<p class="lessName">Урок 3</p>
-			<p>В этом уроке мы изучим бла бла бла бла бла бла бла бла бла бла</p>
-		</div>
-		<div class="less less4">
-			<p class="lessName">Урок 4</p>
-			<p>В этом уроке мы изучим бла бла бла бла бла бла бла бла бла бла</p>
-		</div>
-		<div class="less less5">
-			<p class="lessName">Урок 5</p>
-			<p>В этом уроке мы изучим бла бла бла бла бла бла бла бла бла бла</p>
-		</div>
+		<a class="less" href="lesson/lesson_1.html">
+			<div>
+				<p class="lessName">Урок 1</p>
+				<p>В этом уроке мы изучим бла бла 
+				бла бла бла бла бла бла бла бла 
+				бла бла бла бла бла бла бла бла
+				</p>
+			</div>
+		</a>
+		<a class="less" href="lesson/lesson_2.html">
+			<div>
+				<p class="lessName">Урок 2</p>
+				<p>В этом уроке мы изучим бла бла 
+				бла бла бла бла бла бла бла бла</p>
+			</div>
+		</a>
+		<a class="less" href="lesson/lesson_3.html">
+			<div>
+				<p class="lessName">Урок 3</p>
+				<p>В этом уроке мы изучим бла бла 
+				бла бла бла бла бла бла бла бла</p>
+			</div>
+		</a>
+		<a class="less" href="lesson/lesson_4.html">
+			<div>
+				<p class="lessName">Урок 4</p>
+				<p>В этом уроке мы изучим бла бла 
+				бла бла бла бла бла бла бла бла</p>
+			</div>
+		</a>
+		<a class="less" href="lesson/lesson_5.html">
+			<div>
+				<p class="lessName">Урок 5</p>
+				<p>В этом уроке мы изучим бла бла 
+				бла бла бла бла бла бла бла бла</p>
+			</div>
+		</a>
+		<a class="less" href="lesson/lesson_6.html">
+			<div>
+				<p class="lessName">Урок 6</p>
+				<p>В этом уроке мы изучим бла бла 
+				бла бла бла бла бла бла бла бла</p>
+			</div>
+		</a>
+		<a class="less" href="lesson/lesson_7.html">
+			<div>
+				<p class="lessName">Урок 7</p>
+				<p>В этом уроке мы изучим бла бла 
+				бла бла бла бла бла бла бла бла</p>
+			</div>
+		</a>
+		<a class="less" href="lesson/lesson_8.html">
+			<div>
+				<p class="lessName">Урок 8</p>
+				<p>В этом уроке мы изучим бла бла 
+				бла бла бла бла бла бла бла бла</p>
+			</div>
+		</a>
+		<a class="less" href="lesson/lesson_9.html">
+			<div>
+				<p class="lessName">Урок 9</p>
+				<p>В этом уроке мы изучим бла бла 
+				бла бла бла бла бла бла бла бла</p>
+			</div>
+		</a>
 	</div>
 </div>
 	
