--- a/lesson/old_form.html
+++ b/lesson/old_form.html
@@ -3,12 +3,12 @@
 <html>
 
 	<head>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 		<meta charset="UTF-8">
 		<title>Конструктор запросов</title>
-		<link rel="stylesheet" href="style.css">
-		<script src="jquery-3.2.1.min.js"></script>
-		<script src="script.js"></script>
+		<link rel="stylesheet" href="../style.css">
+		<script src="../jquery-3.2.1.min.js"></script>
+		<script src="../script.js"></script>
 		
 		
 	</head>
@@ -18,14 +18,11 @@
 <!--================= ШАПКА ===================-->
 	<header>
 		<div class="hed">
-			<nav>
-				<ul>
-					<li><a href="index.html">Что это?</a>
-					<li><a href="kostruct.html">Конструктор</a>
-					<li><a href="faq.html">Справочник</a>
-					<li><a href="index.html"><img class="logo" src="logo.png"></a>
-				</ul>
-			<nav>	
+			<div class="men1"><a href="../index.html"><img class="logo" src="../logo.png"></a>	</div>
+			<div class="men"><a href="../index.html">Что это?</a></div>
+			<div class="men"><a href="../kostruct.html">Занятия</a></div>
+			<div class="men"><a href="../faq.html">Справочник</a></div>
+			
 		</div>
 	</header>
 	
