--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,8 @@
 		<meta charset="UTF-8">
 		<title>Конструктор запросов</title>
 		<link rel="stylesheet" href="style.css">
+		<script src="jquery-3.2.1.min.js"></script>
+		<script src="script_heder_footer.js"></script>
 	</head>
 	
 <body>
@@ -14,11 +16,6 @@
 <!--================= ШАПКА ===================-->
 	<header>
 		<div class="hed">
-			<div class="men1"><a href="index.html"><img class="logo" src="logo.png"></a>	</div>
-			<div class="men"><a href="index.html">Что это?</a></div>
-			<div class="men"><a href="kostruct.html">Занятия</a></div>
-			<div class="men"><a href="faq.html">Справочник</a></div>
-			
 		</div>
 	</header>
 	
@@ -49,7 +46,6 @@
 <!--================= ПОДВАЛ ===================-->
 	<footer>
 		<div class="foot">
-			ГПОУ ЯО Ростовский педагогический колледж  2017-2019 <sup>©</sup>
 		</div>	
 	</footer>
 	
