--- a/kostruct.html
+++ b/kostruct.html
@@ -5,21 +5,17 @@
 	<head>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<meta charset="UTF-8">
-		<title>Конструктор запросов</title>
+		<title>MyQuery</title>
 		<link rel="stylesheet" href="style.css">
 		<script src="jquery-3.2.1.min.js"></script>
 		<script src="script.js"></script>
+		<script src="script_heder_footer.js"></script>
 	</head>
 <body>
 
 <!--================= ШАПКА ===================-->
 	<header>
 		<div class="hed">
-			<div class="men1"><a href="index.html"><img class="logo" src="logo.png"></a>	</div>
-			<div class="men"><a href="index.html">Что это?</a></div>
-			<div class="men"><a href="kostruct.html">Занятия</a></div>
-			<div class="men"><a href="faq.html">Справочник</a></div>
-			
 		</div>
 	</header>
 	
@@ -34,10 +30,9 @@
 	<div class="container">
 		<a class="less" href="lesson/lesson_1.html">
 			<div>
-				<p class="lessName">Урок 1</p>
-				<p>В этом уроке мы изучим бла бла 
-				бла бла бла бла бла бла бла бла 
-				бла бла бла бла бла бла бла бла
+				<p class="lessName">Урок 1. Введение в MySQL</p>
+				<p>Вводный урок, в котором вы узнаете о способах подключения 
+				к базам данных MySQL.
 				</p>
 			</div>
 		</a>
@@ -103,7 +98,6 @@
 <!--================= ПОДВАЛ ===================-->
 	<footer>
 		<div class="foot">
-			ГПОУ ЯО Ростовский педагогический колледж  2017-2019 <sup>©</sup>
 		</div>	
 	</footer>
 
