--- a/lesson/lesson_1.html
+++ b/lesson/lesson_1.html
@@ -8,6 +8,7 @@
 		<title>Конструктор запросов</title>
 		<link rel="stylesheet" href="../style.css">
 		<script src="../jquery-3.2.1.min.js"></script>
+		<script src="../script_heder_footer.js"></script>
 		<script src="../script.js"></script>
 		
 		
@@ -17,34 +18,135 @@
 
 <!--================= ШАПКА ===================-->
 	<header>
-		<div class="hed">
-			<div class="men1"><a href="../index.html"><img class="logo" src="../logo.png"></a>	</div>
-			<div class="men"><a href="../index.html">Что это?</a></div>
-			<div class="men"><a href="../kostruct.html">Занятия</a></div>
-			<div class="men"><a href="../faq.html">Справочник</a></div>
-			
+		<div class="hed inner_hed">
 		</div>
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<div class="hr_zagolovok">Выберите какой запрос вы хотите создать</div>
+<div class="hr_zagolovok">Урок 1. Введение в MySQL</div>
 
 	<div id="pods" class="podskazki_minus">
 		Короткая справка <a id="close" href="#">X</a>
 		<div id="podskazki_text"></div>
 	</div>
 	
-	<div class="content">
-		<div class="zapros">
-			Готовый запрос:<br>
-			<textarea type="text" value="ntrcn" rows="5" cols="50" size="57" id="zap"></textarea>
+<div class="lessContent">
+	<div class="container">
+		
+		<div>
+			<h2>Основные характеристики MySQL</h2>
+			<p>База данных — это структурированная коллекция записей или данных, 
+			хранящихся в компьютерной системе и организованных так, что можно осуществлять 
+			быстрый поиск и извлечение нужной информации.</p>
+			<p>В названии MySQL составляющая SQL означает Structured Query Language — 
+			«язык структурированных запросов». Если характеризовать его в общих чертах, то 
+			это язык, основанный на словах английского языка и используемый также в других 
+			системах управления базами данных, например Oracle и Microsoft SQL Server. Он 
+			разработан для предоставления возможности создания простых запросов к базе 
+			данных посредством команд следующего вида:</p>
+			<div class="vid_zap">SELECT title FROM publications WHERE author = 
+			'Charles Dickens';</div>
+			<p>В базе данных MySQL имеются одна или несколько таблиц, каждая из которых 
+			состоит из записей, или строк. Внутри строк находятся разные столбцы, или поля, 
+			в которых и содержатся данные. </p>
+			<h2>Доступ к MySQL из командной строки</h2>
+			<p>Работать с MySQL можно тремя основными способами: используя командную 
+			строку, применяя веб-интерфейс наподобие phpMyAdmin и задействуя такой 
+			язык программирования, как PHP.</p>
+			<h2>Выберете способ работы с MySQL</h2>
 		</div>
+			
+			<div class="less less1" id="less1_cmd_button"><p class="lessName">Работа с интерфейсом командной строки</p></div>
+			<div class="less less1" id="less1_myadmin_button"><p class="lessName">Работа с MySQL через phpMyAdmin</p></div>
+			<div class="less less1" id="less1_php_button"><p class="lessName">Работа с использованием PHP</p></div>
+	</div>	
+</div>
+		<div class="disguise_block" id="less1_cmd" hidden="true">
+			<h2>Начало работы с интерфейсом командной строки</h2>
+			<p>По умолчанию начальным для MySQL будет пользователь по имени <b>root</b>, 
+			у которого не установлен пароль. Учитывая то, что это разработочный сервер, 
+			доступ к которому можете получить только вы, мы не станем устанавливать 
+			пароль.</p>
+			<p>Чтобы войти в интерфейс командной строки MySQL, следует выбрать команду 
+			<b>Пуск=>Выполнить</b>(или использовать сочетание клавиш <b>win+R</b>) и в 
+			окне запуска ввести команду <b>CMD</b>, после чего нажать клавишу 
+			<b>Enter</b>. В результате будет вызвано командное окно Windows. Находясь 
+			в этом окне, следует ввести следующую команду (в нашем случае мы используем 
+			OSPanel, вам же следует уточнить путь к MySQL у преподавателя):</p>
+			<div class="vid_zap">"С:\OSPanel\modules\database\MySQL-5.1\bin\mysql" -u root</div>
+			<p><i>Обратите внимание на кавычки, в которые заключены основной путь и имя файла. 
+			Их присутствие обусловлено наличием пробелов, которые неправильно интерпретируются 
+			командной строкой, а кавычки группируют составные части имени файла в единую строку, 
+			понятную программе Command.</i></p>
+			<p>Эта команда предписывает MySQL зарегистрировать вас как пользователя root
+			без пароля. Теперь вы должны оказаться в среде MySQL и сможете приступить 
+			к вводу команд. Чтобы убедиться в том, что все работает должным образом, 
+			введите следующую команду, результат выполнения которой должен быть похож на 
+			показанный на рис. 1:</p>
+			<div class="vid_zap">SHOW databases;</div>
+			<img src="../img/less1_img1.jpg">
+		</div>
+		<div class="disguise_block" id="less1_myadmin" hidden="true">
+			<h2>Работа с MySQL через phpMyAdmin</h2>
+			<p>Сейчас мы рассмотрим вход в интерфейс phpMyAdmin, входящего в пакет OSPanel. 
+			Для начала необходимо запустить программу Open Server, после чего на панели задач 
+			появится красный флажок <img src="../img/less1_img2.jpg">. Нажимаем на него и во 
+			всплывающем меню выбираем зеленый флажок <img src="../img/less1_img3.jpg">. После 
+			этого в панели задач должен отображаться зеленый флажок, жмем на него и выбираем 
+			пункт <b>Дополнительно => PhpMyAdmin</b>. Далее вводим данные как на рисунке 2, и 
+			жмем кнопку <b>Вперед</b></p>
+			<img src="../img/less1_img4.jpg">
+		</div>
+		<div class="disguise_block" id="less1_php" hidden="true">
+			<h2>Доступ к MySQL с использованием PHP</h2>
+			<p>Смысл использования PHP в качестве интерфейса к MySQL заключается в форматировании 
+			результатов SQL-запросов и придании им внешнего вида, предназначенного для вывода на 
+			вебстраницу. Обладая возможностью входа в установлен-ную систему MySQL с помощью 
+			своего имени пользователя и пароля, вы можете 
+			сделать то же самое и из PHP. Но вместо использования командной строки MySQL 
+			для ввода команд и просмотра выходной информации нужно будет создать строки 
+			запроса, а затем передать их MySQL. Ответ MySQL поступит в виде структуры 
+			данных, которую PHP сможет распознать, а не в виде того отформатированного 
+			экранного вывода, который вы видели в процессе работы с командной строкой. 
+			Затем с помощью команд PHP можно будет извлекать данные и приводить их к формату 
+			веб-страницы.</p>
+			<h2>Создание файла регистрации</h2>
+			<p>Большинство веб-сайтов, разработанных на PHP, содержат множество программных файлов, 
+			которым понадобится доступ к MySQL, и им нужны будут сведения, 
+			касающиеся входа в систему и пароля. Поэтому имеет смысл создать отдельный 
+			файл для их хранения, а затем включать его туда, где он необходим. Такой файл, 
+			который я назвал login.php, показан в примере ниже. Наберите текст этого примера, 
+			заменяя значения <b>имя_пользователя</b> и <b>пароль</b> теми, которыми вы пользуетесь 
+			для входа в свою базу данных MySQL, и сохраните текст в отдельном файле. 
+			Через некоторое время этот файл нам пригодится. Имя хоста <b>localhost</b> будет работать до 
+			тех пор, пока вы используете базу данных MySQL на своей локальной системе.</p>
+			<img id="less1_code_php" src="../img/less1_img5.jpg">
+			<div class="generator">
+				<p>
+					$db_hostname <input maxlength="25" size="20" value="localhost" id="name_BD"> 
+					<a title="Сдесь вы можете ввести свой адрес хоста, если он отличается от localhost, по умолчанию." id="vopros_nametbl" class="vopros" href="#">?</a>
+				</p>
+				<p>
+					$db_database <input maxlength="25" size="20" value="test" id="name_BD"> 
+					<a title="Сдесь необходимо ввести название базы данных к которой необходимо подключиться." id="vopros_nametbl" class="vopros" href="#">?</a>
+				</p>
+				<p>
+					$db_username <input maxlength="25" size="20" value="user" id="name_BD"> 
+					<a title="Сдесь необходимо ввести имя пользователя от имени которго необходимо подключится к базе данных." id="vopros_nametbl" class="vopros" href="#">?</a>
+				</p>
+				<p>
+					$db_password <input maxlength="25" size="20" value="password" id="name_BD"> 
+					<a title="Сдесь необходимо ввести пароль для входа в базу данных." id="vopros_nametbl" class="vopros" href="#">?</a>
+				</p>
+				<button class="button" id="less1_button_phpcode">Создать код PHP</button>
+			</div>
+			<div id="less1_polezapros"> </div>
+		
 	</div>
 	
 <!--================= ПОДВАЛ ===================-->
 	<footer>
 		<div class="foot">
-			ГПОУ ЯО Ростовский педагогический колледж  2017-2018 <sup>©</sup>
 		</div>	
 	</footer>
 
