--- a/spravka/f6_1.html
+++ b/spravka/f6_1.html
@@ -7,19 +7,17 @@
 		<title>Конструктор запросов</title>
 		<link rel="stylesheet" href="../style.css">
 		<script src="../jquery-3.2.1.min.js"></script>
+		<script src="../script_heder_footer.js"></script>
 		<script src="../script.js"></script>
+		
+		
 	</head>
 	
 <body>
 
 <!--================= ШАПКА ===================-->
 	<header>
-		<div class="hed">
-			<div class="men1"><a href="../index.html"><img class="logo" src="logo.png"></a>	</div>
-			<div class="men"><a href="../index.html">Что это?</a></div>
-			<div class="men"><a href="../kostruct.html">Занятия</a></div>
-			<div class="men"><a href="../faq.html">Справочник</a></div>
-			
+		<div class="hed inner_hed">
 		</div>
 	</header>
 	
@@ -314,7 +312,6 @@ mysql_query($sql);
 <!--================= ПОДВАЛ ===================-->
 	<footer>
 		<div class="foot">
-			ГПОУ ЯО Ростовский педагогический колледж  2017-2019 <sup>©</sup>
 		</div>	
 	</footer>
 	
