--- a/spravka/f4.html
+++ b/spravka/f4.html
@@ -7,6 +7,7 @@
 		<title>Конструктор запросов</title>
 		<link rel="stylesheet" href="../style.css">
 		<script src="../jquery-3.2.1.min.js"></script>
+		<script src="../script_heder_footer.js"></script>
 		<script src="../script.js"></script>
 	</head>
 	
@@ -14,11 +15,8 @@
 
 <!--================= ШАПКА ===================-->
 	<header>
-		<div class="hed">
-			<div class="men1"><a href="../index.html"><img class="logo" src="logo.png"></a>	</div>
-			<div class="men"><a href="../index.html">Что это?</a></div>
-			<div class="men"><a href="../kostruct.html">Занятия</a></div>
-			<div class="men"><a href="../faq.html">Справочник</a></div>
+		<div class="hed inner_hed">
+			
 			
 		</div>
 	</header>
