--- a/kostruct.html
+++ b/kostruct.html
@@ -100,7 +100,7 @@
 		<div class="foot">
 		</div>	
 	</footer>
-
+<div id="toTop"><img class="strelka" src="up.png"></div >
 </body>
 </html>
 <!---->
