--- a/spravka/f10.html
+++ b/spravka/f10.html
@@ -22,8 +22,6 @@
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<a href="#top"><img class="strelka" src="../up.png"></a>
-
 <div class="hr_zagolovok">Поиск записей в таблице(SELECT)</div>
 	<div class="content">
 		<p>
@@ -219,7 +217,7 @@ $result=mysql_query($sql);
 		<div class="foot">
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="../up.png"></div >	
 </body>
 </html>
 <!---->
