--- a/spravka/f2.html
+++ b/spravka/f2.html
@@ -22,8 +22,6 @@
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<a href="#top"><img class="strelka" src="../up.png"></a>
-
 <div class="hr_zagolovok">Создание базы данных MySQL (CREATE DATABASE)</div>
 	<div class="content">
 		
@@ -101,7 +99,7 @@
 		<div class="foot">
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="../up.png"></div >	
 </body>
 </html>
 <!---->
