--- a/spravka/f4.html
+++ b/spravka/f4.html
@@ -22,8 +22,6 @@
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<a href="#top"><img class="strelka" src="../up.png"></a>
-
 <div class="hr_zagolovok">Создание таблицы в базе данных MySQL (CREATE TABLE)</div>
 	<div class="content">
 Создание таблицы в базе данных производится командой <b>CREATE TABLE</b>.
@@ -633,7 +631,7 @@ FROM
 			ГПОУ ЯО Ростовский педагогический колледж  2017-2019 <sup>©</sup>
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="../up.png"></div >	
 </body>
 </html>
 <!---->
