--- a/spravka/f6_3.html
+++ b/spravka/f6_3.html
@@ -22,8 +22,6 @@
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<a href="#top"><img class="strelka" src="../up.png"></a>
-
 <div class="hr_zagolovok">Изменение свойств таблицы : Изменение свойств столбца (ALTER TABLE CHANGE)</div>
 	<div class="content">
 Изменить свойства одного или нескольких столбцов можно при помощи следующей конструкции:
@@ -84,7 +82,7 @@ mysql_query($sql);
 		<div class="foot">
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="../up.png"></div >	
 </body>
 </html>
 <!---->
