--- a/spravka/f7.html
+++ b/spravka/f7.html
@@ -22,8 +22,6 @@
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<a href="#top"><img class="strelka" src="../up.png"></a>
-
 <div class="hr_zagolovok">Вставка строки в таблицу INSERT</div>
 	<div class="content">
 		<p>
@@ -239,7 +237,7 @@ WHERE
 		<div class="foot">
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="../up.png"></div >	
 </body>
 </html>
 <!---->
