--- a/spravka/f8.html
+++ b/spravka/f8.html
@@ -22,8 +22,6 @@
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<a href="#top"><img class="strelka" src="../up.png"></a>
-
 <div class="hr_zagolovok">Удаление строк из таблицы (DELETE FROM)</div>
 	<div class="content">
 		<p>
@@ -295,7 +293,7 @@ WHERE
 		<div class="foot">
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="../up.png"></div >	
 </body>
 </html>
 <!---->
