--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<div class="foot">
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="up.png"></div >	
 </body>
 </html>
 <!---->
