--- a/spravka/f1.html
+++ b/spravka/f1.html
@@ -22,8 +22,6 @@
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<a href="#top"><img class="strelka" src="../up.png"></a>
-
 <div class="hr_zagolovok">Типы данных, используемые в базе данных MySQL</div>
 
 	<div class="content">
@@ -186,7 +184,7 @@
 		<div class="foot">
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="../up.png"></div >	
 </body>
 </html>
 <!---->
