--- a/spravka/f5.html
+++ b/spravka/f5.html
@@ -22,8 +22,6 @@
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<a href="#top"><img class="strelka" src="../up.png"></a>
-
 <div class="hr_zagolovok">Удаление таблицы из базы данных MySQL (DROP TABLE)</div>
 	<div class="content">
 		
@@ -64,7 +62,7 @@
 		<div class="foot">
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="../up.png"></div >	
 </body>
 </html>
 <!---->
