--- a/spravka/f6.html
+++ b/spravka/f6.html
@@ -22,8 +22,6 @@
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<a href="#top"><img class="strelka" src="../up.png"></a>
-
 <div class="hr_zagolovok">Изменение свойств таблицы : Переименование таблицы (ALTER TABLE RENAME)</div>
 	<div class="content">
 			Изменение свойств таблицы производиться при помощи команды <b>ALTER TABLE</b>.
@@ -312,7 +310,7 @@ mysql_query($sql);
 		<div class="foot">
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="../up.png"></div >	
 </body>
 </html>
 <!---->
