--- a/spravka/f6_2.html
+++ b/spravka/f6_2.html
@@ -22,8 +22,6 @@
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<a href="#top"><img class="strelka" src="../up.png"></a>
-
 <div class="hr_zagolovok">Изменение свойств таблицы : Вставка столбцов (ALTER TABLE ADD)</div>
 	<div class="content">
 		<p>
@@ -117,7 +115,7 @@ mysql_query($sql);
 		<div class="foot">
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="../up.png"></div >	
 </body>
 </html>
 <!---->
