--- a/spravka/f9.html
+++ b/spravka/f9.html
@@ -22,8 +22,6 @@
 	</header>
 	
 <!--================= КОНТЕНТ ===================-->
-<a href="#top"><img class="strelka" src="../up.png"></a>
-
 <div class="hr_zagolovok">Обновление записей в таблице(UPDATE)</div>
 	<div class="content">
 		<p>
@@ -144,7 +142,7 @@ LIMIT
 		<div class="foot">
 		</div>	
 	</footer>
-	
+<div id="toTop"><img class="strelka" src="../up.png"></div >
 </body>
 </html>
 <!---->
